# F5698_Ultimatni_prirucka_podzim_2023

./: .gitignore  LICENSE  README.md
01_intro/: INTRO.md  log.ParticleInEB  zikan.py
02_intro_2/: log.laplacianFoam  log_parser.py
03_data_structures/: _3_hodina.py  run_me_in_vsdoce.py
04_dataclasses/: Holusa_dataclass.py  _4_hodina_dataclas_varC_oprava_zavorek_vypracovany_priklad_ke_klaudu_uprava_chyb_v_radku_konecne_verze_AAA.py  dataclasses_vscode.py  kolar_dataclass_pokus.py
06_OF_parser/: pyproject.toml
06_OF_parser/src/OFParser/: example.py  holusa.py  kolar.py  log_example  sadovsky.py  timestep.py
06_OF_parser/tests/: backup_test_example.py  backup_test_kolar.py  backup_test_log.py  test_example.py  test_kolar.py  test_log.py  test_timestep.py  test_timestep_dafcikova.py  test_timestep_holusa.py  test_timestep_kolar.py  test_timestet_zikan.py
07_rekapitulace/: LICENCE  pyproject.toml
07_rekapitulace/src/OFParser2/: __main__.py  log_parser.py  timestep.py
07_rekapitulace/tests/: log.ParticleInEB  test_log_parser.py  test_timestep.py
